--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "image-home",
   "version": "0.0.1",
   "description": "image",
-  "main": "index.js",
+  "main": "src/index.js",
   "directories": {
     "test": "test"
   },
